--- a/styles.css
+++ b/styles.css
@@ -325,6 +325,59 @@ footer{
   background-color: var(--color-secondary);
 }
 
+.footer-contents{
+  padding-block: 120px;
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
+  gap: 90px;
+}
+
+.footer-logo{
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+
+.footer-logo p{
+  font-size: 30px;
+  font-weight: bold;
+  color: var(--color-white);
+}
+
+.footer-details > p {
+  color: var(--color-white);
+  line-height: 1.6;
+  margin-top: 20px;
+}
+
+.footer-title{
+  color: var(--color-white);
+  font-size: 20px;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+
+.footer-links ul{
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.footer-links li{
+  list-style: none;
+}
+.footer-links li a{
+  text-decoration: none;
+  color: var(--color-white);
+  font-weight: 500;
+}
+
+marquee{
+  font-size: 20px;
+  font-weight: bold;
+  padding-block: 20px;
+  border-top: 1px solid var(--color-white);
+}
 
 /*=========================responsive=================*/
 
@@ -388,6 +441,11 @@ footer{
   }
   .hero-content p {
     font-size: 12px;
+  }
+
+  .footer-contents{
+    grid-template-columns: 1fr;
+    gap: 20px;
   }
 }
 
